sdk test harness
